[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/EndScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Complete.gd" type="Script" id=3]
[ext_resource path="res://assets/sound/ambiance_edit.wav" type="AudioStream" id=4]
[ext_resource path="res://src/GameScreen.tscn" type="PackedScene" id=5]

[node name="Complete" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Game" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="GameScreen" parent="." instance=ExtResource( 5 )]
margin_right = 480.0
margin_bottom = 720.0

[node name="EndScreen" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="game_loose" from="Game" to="." method="_on_Game_game_loose"]
[connection signal="game_win" from="Game" to="." method="_on_Game_game_win"]
[connection signal="start_game" from="GameScreen" to="." method="_on_GameScreen_start_game"]
[connection signal="start_game" from="GameScreen" to="Game" method="_on_GameScreen_start_game"]
[connection signal="replay" from="EndScreen" to="." method="_on_EndScreen_replay"]
